// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - accepted bin 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.ACCEPTED_BIN" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - accepted pick 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.ACCEPTED_PICK" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - complete 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.COMPLETE" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - deleted 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.DELETED" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - no pallets found 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.NO_PALLETS_FOUND" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to bin 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.READY_TO_BIN" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to pick 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to work 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.READY_TO_WORK" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card with items (some filtered) 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PALLET.PALLET_ID" translation] 2
      </Text>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text>
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;
